@@ -4490,6 +4490,40 @@ XS(XS_Client_SetEndurance)
 	XSRETURN_EMPTY;
 }
 
+XS(XS_Client_SendOPTranslocateConfirm);
+XS(XS_Client_SendOPTranslocateConfirm)
+{
+	dXSARGS;
+	if (items != 3)
+		Perl_croak(aTHX_ "Usage: Client::SendOPTranslocateConfirm(THIS, Caster, SpellID)");
+	{
+		Client *	THIS;
+		Mob * caster = NULL;
+		sint32 spell_id = (sint32)SvUV(ST(2));
+
+		if (sv_derived_from(ST(0), "Client")) {
+			IV tmp = SvIV((SV*)SvRV(ST(0)));
+			THIS = INT2PTR(Client *,tmp);
+		}
+		else
+			Perl_croak(aTHX_ "THIS is not of type Client");
+		if(THIS == NULL)
+			Perl_croak(aTHX_ "THIS is NULL, avoiding crash.");
+
+		if (sv_derived_from(ST(1), "Mob")) {
+			IV tmp = SvIV((SV*)SvRV(ST(1)));
+			caster = INT2PTR(Mob *,tmp);
+		}
+		else
+			Perl_croak(aTHX_ "caster is not of type Mob");
+		if(caster == NULL)
+			Perl_croak(aTHX_ "caster is NULL, avoiding crash.");
+
+		THIS->SendOPTranslocateConfirm(caster, spell_id);
+	}
+	XSRETURN_EMPTY;
+}
+
 
 #ifdef __cplusplus
 extern "C"
@@ -4677,6 +4711,7 @@ XS(boot_Client)
 		newXSproto(strcpy(buf, "GetMaxEndurance"), XS_Client_GetMaxEndurance, file, "$");
 		newXSproto(strcpy(buf, "GetEnduranceRatio"), XS_Client_GetEnduranceRatio, file, "$");
 		newXSproto(strcpy(buf, "SetEndurance"), XS_Client_SetEndurance, file, "$$");
+		newXSproto(strcpy(buf, "SendOPTranslocateConfirm"), XS_Client_SendOPTranslocateConfirm, file, "$$$");
 	XSRETURN_YES;
 }
 
