@@ -3065,6 +3065,23 @@ void Mob::DoBuffTic(int16 spell_id, int32 ticsremaining, int8 caster_level, Mob*
 	if (spell_id == SPELL_UNKNOWN)
 		return;
 
+	if(IsNPC())
+	{
+		if(((PerlembParser*)parse)->SpellHasQuestSub(spell_id, "EVENT_SPELL_EFFECT_BUFF_TIC_NPC"))
+		{
+			parse->Event(EVENT_SPELL_EFFECT_BUFF_TIC_NPC, 0, itoa(spell_id), CastToNPC(), this, caster ? caster->GetID() : 0);
+			return;
+		}
+	}
+	else
+	{
+		if(((PerlembParser*)parse)->SpellHasQuestSub(spell_id, "EVENT_SPELL_EFFECT_BUFF_TIC_CLIENT"))
+		{
+			parse->Event(EVENT_SPELL_EFFECT_BUFF_TIC_CLIENT, 0, itoa(spell_id), NULL, this, caster ? caster->GetID() : 0);
+			return;
+		}
+	}
+
 	for (int i=0; i < EFFECT_COUNT; i++)
 	{
 		if(IsBlankSpellEffect(spell_id, i))
